--- a/src/Drago/Commerce/UI/Order/Delivery.latte
+++ b/src/Drago/Commerce/UI/Order/Delivery.latte
@@ -8,6 +8,7 @@
 	{* Includes the breadcrumbs component to render the navigation steps. *}
 	{include breadcrumbs, $breadcrumbs}
 
+	<h2 class="mb-4 fw-normal fs-4">Information for delivery of goods</h2>
 	<form n:name="delivery" n:if="count($carrier) && count($payment)" class="mb-4">
 
 		{* Section: Choose a carrier (shipping method) *}
