--- a/src/Drago/Commerce/UI/Order/Summary.latte
+++ b/src/Drago/Commerce/UI/Order/Summary.latte
@@ -8,7 +8,7 @@
 	{include breadcrumbs, $breadcrumbs}
 
 	{* Pre-shipment summary heading *}
-	<h2 class="mb-4 display-6">Pre-shipment summary</h2>
+	<h2 class="mb-4 fw-normal fs-4">Pre-shipment summary</h2>
 
 	{* Products and costs summary table *}
 	<div class="table-responsive mb-4">
@@ -50,7 +50,7 @@
 	</p>
 
 	{* Customer information summary *}
-	<h2 class="mb-4 display-6">Customer Information</h2>
+	<h2 class="mb-4 fw-normal fs-4 pb-2 border-bottom">Customer Information</h2>
 	<div class="mb-4">
 		<p class="mb-2">
 			<strong class="fw-semibold">Name and surname:</strong><br>
