--- a/src/Drago/Commerce/UI/ShoppingCart/SummaryCart.latte
+++ b/src/Drago/Commerce/UI/ShoppingCart/SummaryCart.latte
@@ -75,6 +75,6 @@
 {else}
 
 	{* Message for empty cart *}
-	<p>Your shopping cart is empty.</p>
+	<p class="mt-2">Your shopping cart is empty.</p>
 
 {/if}
